update: update/delete avatar API, add envoy boilerplate, clean up unused code and fix bugs config
