# go-authz/authorization/docs/swagger.json
@@ -15,7 +15,7 @@
     "paths": {
         "/invitations/verify": {
             "post": {
-                "description": "Get invitation data by ID",
+                "description": "Verify invitation data by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,9 +23,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Team"
+                    "Membership"
                 ],
-                "summary": "Get invitation by ID",
+                "summary": "Verify invitation by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -55,7 +55,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Invitation"
+                    "Membership"
                 ],
                 "summary": "Get invitation by ID",
                 "parameters": [
@@ -85,7 +85,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Invitation"
+                    "Membership"
                 ],
                 "summary": "Delete invitation by ID",
                 "parameters": [
@@ -295,7 +295,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Team"
+                    "Membership"
                 ],
                 "summary": "Send invitation",
                 "parameters": [
@@ -327,7 +327,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Team"
+                    "Membership"
                 ],
                 "summary": "Resend Invitation",
                 "parameters": [
@@ -398,7 +398,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Team"
+                    "Membership"
                 ],
                 "summary": "Change team member role",
                 "parameters": [
@@ -435,7 +435,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Team"
+                    "Membership"
                 ],
                 "summary": "Delete team member",
                 "parameters": [
@@ -450,6 +450,75 @@
                         "type": "string",
                         "description": "Membership ID",
                         "name": "membership_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/teams/{team_id}/avatar": {
+            "put": {
+                "description": "Update team avatar",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Team"
+                ],
+                "summary": "Update team avatar",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Team ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "avatar",
+                        "name": "avatar",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete team avatar",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Team"
+                ],
+                "summary": "Delete team avatar",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Team ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -551,6 +620,59 @@
                     "User"
                 ],
                 "summary": "Delete user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/avatar": {
+            "put": {
+                "description": "Update user avatar",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update user avatar",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "User avatar",
+                        "name": "avatar",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete user avatar",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Delete user avatar",
                 "responses": {
                     "200": {
                         "description": "OK",
